# django-unicorn

./: .all-contributorsrc  .dj-config.toml  .editorconfig  .eslintrc.js  .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPING.md  LICENSE  README.md  SECURITY.md  conftest.py  data.json  endpoint.json  generate_badge.sh  justfile  mypy.ini  noxfile.py  package-lock.json  package.json  pyproject.toml  pytest.ini  rollup.config.eval.js  rollup.config.js  setup.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bugs.yml  docs.yml  features.md  features.yml
.github/workflows/: ci.yml  coverage.yml  js.yml  publish.yml  python.yml  runtest.yml
django_unicorn/: CHANGELOG.md  cacher.py  call_method_parser.py  components.py  db.py  decorators.py  errors.py  message.py  serializer.py  settings.py  typer.py  typing.py  unicorn-ascii.txt  urls.py  utils.py  views.py
django_unicorn/actions/: __init__.py  base.py  call_method.py  refresh.py  reset.py  sync_input.py  toggle.py  utils.py  validate.py
django_unicorn/actions/backend/: __init__.py  base.py  call_method.py  refresh.py  reset.py  set_attribute.py  sync_input.py  toggle.py  utils.py  validate.py
django_unicorn/actions/frontend/: __init__.py  base.py  (+5 more)
django_unicorn/components/: __init__.py  mixins.py  types.py  typing.py  unicorn_template_response.py  unicorn_view.py  updaters.py
django_unicorn/mergedeep/: README.md  test_mergedeep.py
django_unicorn/templatetags/: unicorn.py
django_unicorn/views/: __init__.py  message.py  objects.py  request.py  response.py  utils.py
docs/source/: actions.md  advanced.md  architecture.md  changelog.md  child-components.md  cli.md  components.md  conf.py  custom-morphers.md  direct-view.md  dirty-states.md  django-models.md  faq.md  file-uploads.md  getting-started.md  index.md  installation.md  javascript.md  loading-states.md  messages.md  pagination.md  partial-updates.md  polling.md  queue-requests.md  redirecting.md  settings.md  table-limitations.md  templates.md  troubleshooting.md  tutorial.md  validation.md  views.md  visibility.md
example/: .watchmanconfig  manage.py
example/books/: __init__.py  apps.py  models.py
example/coffee/: __init__.py  admin.py  apps.py  models.py  views.py
example/electronics/: admin.py  apps.py  models.py
example/issue_77/: admin.py  apps.py  models.py
example/project/: asgi.py  settings.py  urls.py  wsgi.py
example/todos/: __init__.py  apps.py  models.py
example/unicorn/: forms.py
example/www/: urls.py  views.py
htmlcov/: class_index.html  conftest_py.html  function_index.html  index.html  status.json  z_002492a68e1e28ca_unicorn_py.html  z_00dee222abda2ead_test_handle_py.html  z_19aebbbda2eb252a_test_dumps_py.html  z_19aebbbda2eb252a_test_exclude_field_attributes_py.html  z_19aebbbda2eb252a_test_model_value_py.html  z_1d464146ec9be715___init___py.html  z_1d464146ec9be715_action_py.html  z_1d464146ec9be715_message_py.html  z_1d464146ec9be715_objects_py.html  z_1d464146ec9be715_request_py.html  z_1d464146ec9be715_response_py.html  z_1d464146ec9be715_utils_py.html  z_25b030f76d911d03_call_method_py.html  z_25b030f76d911d03_sync_input_py.html  z_25b030f76d911d03_utils_py.html  z_366a7b2996488723_startunicorn_py.html  z_36e4ef22fa8b814e___init___py.html  z_36e4ef22fa8b814e_apps_py.html  z_36e4ef22fa8b814e_models_py.html  z_3e77d26e376e59e6_test_unicorn_py.html  z_3e77d26e376e59e6_test_unicorn_render_py.html  z_3e77d26e376e59e6_test_unicorn_scripts_py.html  z_4f42c6942fb66348_cacher_py.html  z_4f42c6942fb66348_call_method_parser_py.html  z_4f42c6942fb66348_decorators_py.html  z_4f42c6942fb66348_errors_py.html  z_4f42c6942fb66348_serializer_py.html  z_4f42c6942fb66348_settings_py.html  z_4f42c6942fb66348_typer_py.html  z_4f42c6942fb66348_typing_py.html  z_4f42c6942fb66348_urls_py.html  z_4f42c6942fb66348_utils_py.html  z_5707da0eb726a1da_test_call_method_multiple_py.html  z_5707da0eb726a1da_test_call_method_py.html  z_5707da0eb726a1da_test_calls_py.html  (+82 more)
src/django_unicorn/: cacher.py  call_method_parser.py  db.py  decorators.py  errors.py  serializer.py  settings.py  typer.py  typing.py  urls.py  utils.py
tests/: test_cacher.py  test_model_lifecycle.py  test_settings.py  test_typer.py  test_utils.py  urls.py
tests/benchmarks/: test_serial_overhead.py
tests/call_method_parser/: test_parse_args.py  test_parse_call_method_name.py  test_parse_kwarg.py
tests/components/: test_component.py  test_convert_to_dash_case.py  test_convert_to_pascal_case.py  test_convert_to_snake_case.py  test_create.py  test_get_locations.py  test_is_html_well_formed.py  test_issue_650.py  test_issue_668_repro.py  test_mount_redirect.py  test_typer_inheritance.py  test_unicorn_template_response.py  test_unicorn_template_response_recursion.py  test_unicorn_view.py
tests/decorators/: test_db_model.py
tests/integration/: test_basic.py
tests/js/: utils.js
tests/serializer/: test_dumps.py  test_exclude_field_attributes.py  test_model_value.py
tests/templates/: test_component_args.html  test_component_child.html  test_component_child_implicit.html  test_component_kwargs.html  test_component_kwargs_with_html_entity.html  test_component_model.html  test_component_parent.html  test_component_parent_implicit.html  test_component_parent_nested.html  test_component_parent_with_value.html  test_component_target.html  test_component_variable.html  test_component_with_message.html  test_parent_implicit_template.html  test_parent_template.html  test_simpleform.html  test_template.html
tests/templatetags/: test_unicorn.py  test_unicorn_render.py  test_unicorn_scripts.py
tests/views/: fake_components.py  test_fk_loading.py  test_is_component_field_model_or_unicorn_field.py  test_m2m_overwriting.py  test_message.py  test_process_component_request.py  test_unicorn_builtins.py  test_unicorn_dataclass.py  test_unicorn_dict.py  test_unicorn_field.py  test_unicorn_forms.py  test_unicorn_model.py  test_unicorn_set_property_value.py  test_unicorn_view_init.py  test_unit_views.py  test_utils_set_property_fk.py
(+271 files in other folders)
